--- a/src/main/register.html
+++ b/src/main/register.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>会員登録</title>
 </head>
 <body>
-
+	<h2>会員登録</h2>
+	<p th:if="${errorMessage}" th:text="${errorMessage}" style="color:red"></p>
 </body>
 </html>
