--- a/src/main/register.html
+++ b/src/main/register.html
@@ -6,6 +6,21 @@
 </head>
 <body>
 	<h2>会員登録</h2>
-	<p th:if="${errorMessage}" th:text="${errorMessage}" style="color:red"></p>
+	<p th:if="${errorMessage}" th:text="${errorMessage}" style="color:red;"></p>
+	
+	<form th:action="@`/register}" th:object="${user}" method="post"> <div> 
+			<label>ユーザー名：</label>
+			<input type="text" th:field="*{name}" /> <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red;"></p>
+		</div>
+		<div>
+			<label>パスワード：</label>
+			<input type="password" th:field="*{password}" />
+			<p th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red;"></p>
+		</div>
+		
+		<button type="submit">登録</button>
+	</form>
+	
+	<a th:href="@{/login}">ログイン画面へ</a>
 </body>
 </html>
